# intelligent-hz-changer

./: .gitignore  LICENSE  README.md  bunfig.toml  eslint.config.js  i18next.config.ts  index.html  package-lock.json  package.json  tsconfig.node.json
.claude/: settings.json
.github/workflows/: release.yml
public/: identify.html
scripts/: bump.ts
src/: App.tsx  ThemeContext.tsx  i18n.ts  index.css  main.tsx  theme.ts  types.ts  useTheme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: display.rs  identify.rs  lib.rs  logging.rs  main.rs  process_icon.rs  process_watcher.rs  settings.rs  watcher.rs
src/components/: MonitorConfig.tsx  ProcessList.tsx  SettingsTab.tsx  StatusView.tsx
src/locales/de/: translation.json
src/locales/en/: translation.json
