[package]
name = "intelligent-hz-changer"
version = "0.1.5"
description = "Eine App zum automatischen Wechseln der Bildschirm Hz anhand von laufenden Prozessen"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "intelligent_hz_changer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_HiDpi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Shell",
  "Win32_Storage_FileSystem",
] }
base64 = "0.22"
wmi = "0.13"

